--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.2"
